<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height" />

    <!--内容区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_content_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/common_black_txt"
            android:text="@string/title_desc"
            android:textSize="@dimen/middle_text_size"/>

        <!-- 主题 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/white_bg_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@null"
                android:hint="@string/title_int"
                android:textColorHint="@color/common_gray_txt"
                android:inputType="textMultiLine"
                android:gravity="left|top"
                android:textColor="@color/common_black_txt"
                android:textSize="@dimen/small_medium_text_size" />
        </LinearLayout>

        <!-- 内容 -->
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/white_bg_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@null"
                android:textColorHint="@color/common_gray_txt"
                android:hint="@string/content_int"
                android:inputType="textMultiLine"
                android:textColor="@color/common_black_txt"
                android:lines="7"
                android:gravity="left|top"
                android:textSize="@dimen/small_medium_text_size" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/common_black_txt"
            android:text="@string/content_desc"
            android:textSize="@dimen/small_text_size"/>

        <TextView
            android:id="@+id/btn_submit_question"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            android:text="@string/submit_question"
            android:layout_width="match_parent"
            android:background="@drawable/btn_blue_bg_shape"
            android:layout_height="48dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>