<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/large_item_height"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_item_height"
        android:orientation="horizontal">

        <!--全部-->
        <LinearLayout
            android:id="@+id/btn_all_job"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/iv_small_width"
                android:layout_height="@dimen/iv_small_height"
                android:src="@drawable/icon_all_job" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/all_job"
                android:textColor="@color/common_black_txt"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>

        <!--兼职-->
        <LinearLayout
            android:id="@+id/btn_pt_job"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/iv_small_width"
                android:layout_height="@dimen/iv_small_height"
                android:src="@drawable/icon_pt_job" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pt_job"
                android:textColor="@color/common_black_txt"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>

        <!--全职-->
        <LinearLayout
            android:id="@+id/btn_fl_job"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/iv_small_width"
                android:layout_height="@dimen/iv_small_height"
                android:src="@drawable/icon_fl_job" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fl_job"
                android:textColor="@color/common_black_txt"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>

        <!--项目-->
        <LinearLayout
            android:id="@+id/btn_project"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/iv_small_width"
                android:layout_height="@dimen/iv_small_height"
                android:src="@drawable/icon_project" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/project"
                android:textColor="@color/common_black_txt"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>